--- a/Lomba TECHCOMPFEST (BISA LAH YA)/Pulau Bali/Pulau Bali/Pulau Bali/index.html
+++ b/Lomba TECHCOMPFEST (BISA LAH YA)/Pulau Bali/Pulau Bali/Pulau Bali/index.html
@@ -30,7 +30,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/bali1.jpg" alt="" />
+				<img src="../../../assets/Bali/bali1.jpg" alt="" />
 			</div>
 		</section>
 
@@ -61,7 +61,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/upacara adat/galungan1.jpg" alt="" />
+				<img src="../../../assets/Bali/upacara adat/galungan1.jpg" alt="" />
 			</div>
 		</section>
 
@@ -87,7 +87,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/tempat wisata/batur.jpg" alt="" />
+				<img src="../../../assets/Bali/tempat wisata/batur.jpg" alt="" />
 			</div>
 		</section>
 
@@ -110,7 +110,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/pakaian adat/payas1.png" alt="" />
+				<img src="../../../assets/Bali/pakaian adat/payas1.png" alt="" />
 			</div>
 		</section>
 
@@ -133,7 +133,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/tarian adat/legong.jpg" alt="" />
+				<img src="../../../assets/Bali/tarian adat/legong.jpg" alt="" />
 			</div>
 		</section>
 
@@ -157,7 +157,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/makanan/bigul1.jpg" alt="" />
+				<img src="../../../assets/Bali/makanan/bigul1.jpg" alt="" />
 			</div>
 		</section>
 
@@ -172,7 +172,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/flora/jempiring.jpg" alt="" />
+				<img src="../../../assets/Bali/flora/jempiring.jpg" alt="" />
 			</div>
 		</section>
 
@@ -187,7 +187,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/fauna/jalak.jpg" alt="" />
+				<img src="../../../assets/Bali/fauna/jalak.jpg" alt="" />
 			</div>
 		</section>
 
@@ -197,59 +197,6 @@
 				<h2>Masih banyak lagi yang terdapat di Bali</h2>
 				<p>Bali, surganya pariwisata, menawarkan pantai pasir putih, pura megah, tarian tradisional, dan kehidupan laut yang spektakuler. Terkenal dengan keindahan alam dan budayanya yang unik, pulau ini memukau dengan padi terasering, gunung berapi, dan keramahtamahan penduduknya.</p>
 			</div>
-
-			<!-- Gallery -->
-			<div class="gallery style2 medium lightbox onscroll-fade-in">
-				<article>
-					<a href="../assets/Bali/fauna/monyet1.jpg" class="image">
-						<img src="../assets/Bali/fauna/monyet1.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Monyet Bali</h3>
-						<p>Monyet Bali, spesies langka di Pulau Bali, Indonesia.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="" class="image">
-						<img src="../assets/Bali/fauna/jalak.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Jalak Bali</h3>
-						<p>Jalak Bali merupakan salah satu burung pengicau berukuran sedang, dengan panjang lebih kurang 25 cm. Burung ini hanya ditemukan di hutan bagian barat Pulau Bali dan merupakan hewan endemik Indonesia. Burung ini memiliki suara yang merdu dan sering digunakan dalam upacara keagamaan Hindu Bali. Saat ini, jalak Bali terancam punah. </p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="" class="image">
-						<img src="../assets/Bali/fauna/rusa.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Rusa Timor</h3>
-						<p>Salah satu jenis rusa tropis dengan persebaran paling luas di Indonesia, salah satunya tersebar di Bali. Rusa timor merupakan hewan yang dilindungi oleh pemerintah Indonesia. Hal ini disebabkan oleh perburuan liar dan perubahan habitat. Rusa timor rentan terhadap kepunahan.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="" class="image">
-						<img src="../assets/Bali/fauna/banteng.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Banteng Bali</h3>
-						<p>Banteng Bali. Spesies banteng yang endemik di Pulau Bali. Hewan ini besar dan kuat, dengan tinggi sekitar 1,5 hingga 1,75 meter dan berat mencapai 600 hingga 1.000 kilogram. Banteng Bali juga dilindungi karena perburuan liar dan perubahan habitat membuat populasinya menurun.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-			</div>
-
 		</section>
 
 		<!-- Seven -->
