--- a/Lomba TECHCOMPFEST (BISA LAH YA)/Pulau Papua/Pulau Papua/Pulau Papua/index.html
+++ b/Lomba TECHCOMPFEST (BISA LAH YA)/Pulau Papua/Pulau Papua/Pulau Papua/index.html
@@ -27,7 +27,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/Papua1.jpg" alt="" />
+				<img src="../../../assets/Papua/Papua1.jpg" alt="" />
 			</div>
 		</section>
 
@@ -42,7 +42,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Bali/upacara adat/batu1.jpg" alt="" />
+				<img src="../../../assets/Papua/upacara adat/bakar-batu.jpg" alt="" />
 			</div>
 		</section>
 
@@ -56,7 +56,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/tempat wisata/sentani1.jpg" alt="" />
+				<img src="../../../assets/Papua/tempat wisata/sentani1.jpg" alt="" />
 			</div>
 		</section>
 
@@ -79,7 +79,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/pakaian adat/sali.webp" alt="" />
+				<img src="../../../assets/Papua/pakaian adat/sali.webp" alt="" />
 			</div>
 		</section>
 
@@ -93,7 +93,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/tarian adat/sajojo.jpg" alt="" />
+				<img src="../../../assets/Papua/tarian adat/sajojo (1).jpg" alt="" />
 			</div>
 		</section>
 
@@ -108,7 +108,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/makanan/selingkuh2.jpg" alt="" />
+				<img src="../../../assets/Papua/makanan/selingkuh2.jpg" alt="" />
 			</div>
 		</section>
 
@@ -123,7 +123,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/flora/vanda.jpg" alt="" />
+				<img src="../../../assets/Papua/flora/vanda (1).jpg" alt="" />
 			</div>
 		</section>
 
@@ -138,7 +138,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="../assets/Papua/fauna/kanguru.jpg" alt="" />
+				<img src="../../../assets/Papua/fauna/kanguru (1).jpg" alt="" />
 			</div>
 		</section>
 
@@ -148,59 +148,6 @@
 				<h2>Masih banyak lagi yang terdapat di Papua</h2>
 				<p>Papua, dengan kekayaan alamnya yang luar biasa, menawarkan pemandangan alam yang menakjubkan, keanekaragaman hayati yang unik, serta warisan budaya yang kaya. Dari hutan hujan yang megah hingga pegunungan yang menakjubkan, Papua memukau dengan keindahan alamnya yang belum terjamah. Selain itu, keberagaman suku dan tradisi lokal, bersama dengan keramahan masyarakatnya, menjadi daya tarik utama pulau ini.</p>
 			</div>
-
-			<!-- Gallery -->
-			<div class="gallery style2 medium lightbox onscroll-fade-in">
-				<article>
-					<a href="../assets/Papua/fauna/cenderawasih1.webp" class="image">
-						<img src="../assets/Papua/fauna/cenderawasih1.webp" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Burung Cenderawasih</h3>
-						<p>Burung Cendrawasih: Indah, warna-warni, simbol Papua, terancam punah, keunikan ekosistem.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="" class="image">
-						<img src="../assets/Papua/fauna/kasuari.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Burung Kasuari</h3>
-						<p>Kasuari, burung pengicau berukuran besar mencapai 1,5 meter, memiliki habitat asli di Papua dan merupakan burung endemik Indonesia. Terdapat tiga spesies kasuari: kasuari gelambir tunggal, kasuari gelambir ganda, dan kasuari kecil. Meskipun kasuari tidak menghasilkan suara pengicau seperti jalak Bali, keberadaannya memiliki peran penting dalam ekosistem hutan hujan Papua. Sayangnya, populasi kasuari saat ini terancam punah karena perburuan dan hilangnya habitat alami mereka. </p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="" class="image">
-						<img src="../assets/Papua/fauna/tikus.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Tikus Pohon</h3>
-						<p>Tikus pohon, hewan pengerat ulung di pohon, dapat memanjat dan bergelantungan. Habitatnya terdapat di hutan Papua. Tikus pohon membantu menjaga keseimbangan ekosistem. Populasinya stabil, diperkirakan sekitar 100.000 ekor.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="" class="image">
-						<img src="../assets/Papua/fauna/kanguru.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Kanguru Pohon</h3>
-						<p>Kanguru pohon, hewan penting ekosistem hutan hujan Papua. Berperan menyebarkan biji dan mengendalikan populasi hama. Sayangnya, sebagian besar spesiesnya terancam punah akibat perburuan dan kehilangan habitat.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-			</div>
-
 		</section>
 
 		<!-- Seven -->
